fix white dot on mobile device.

--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,7 @@ body {
     overflow: scroll;
     box-shadow: none;
     animation: none;
+    border-radius: 0;
   }
 
   .notepad {
